--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -63,6 +63,10 @@ h5 {
     margin-bottom: 0;
 }
 
+a {
+    text-decoration: none;
+}
+
 body {
     overflow-x: hidden;
 }
@@ -137,6 +141,7 @@ body {
 
 /* SIDEBAR STYLE */
 .sidebar {
+    position: relative;
     width: 230px;
     border-right: var(--border-style);
     background-color: rgba(var(--light-color), 1);
@@ -151,15 +156,18 @@ body {
     padding: 40px 0;
 }
 
-.sidebar .sidebar-menu-bottom {
-    padding-top: 20px;
-    margin-top: 20px;
-    border-top: var(--border-style);
+.sidebar .sidebar-scroll::-webkit-scrollbar {
+    display: none;
+}
+
+.sidebar .sidebar-scroll {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 .sidebar .brand-logo {
-    width: 72px;
-    margin-bottom: 36px;
+    width: 82px;
+    margin-bottom: 46px;
 }
 
 .sidebar .link-wrapper {
@@ -167,14 +175,20 @@ body {
 }
 
 .sidebar .menu-link {
-    background-color: rgba(var(--dark-color), 0.05);
-    border-radius: 12px;
+    background-color: rgba(var(--light-color), 1);
+    border-radius: var(--rounded-md);
     padding: 7px 14px 7px 7px;
-    gap: 8px;
+    border: var(--border-style);
+    border-color: transparent;
 }
 
-.sidebar .link-item,
-.sidebar .link-item .wrapper {
+.sidebar .menu-link.active,
+.sidebar .menu-link:hover {
+    border: var(--border-style);
+    background-color: rgba(var(--dark-color), 0.03);
+}
+
+.sidebar .link-item {
     gap: 16px;
     border: none;
     outline: none;
@@ -182,8 +196,14 @@ body {
     background-color: transparent;
 }
 
+.sidebar .icon-sidebar-wrapper {
+    padding: 11px;
+    background-color: rgba(var(--dark-color), 0.04);
+    border-radius: var(--rounded-sm);
+}
+
 .sidebar .link-item p {
-    color: rgba(var(--dark-color), 0.62);
+    color: rgba(var(--dark-color), 0.52);
     font-size: 0.938rem;
 }
 
@@ -192,16 +212,9 @@ body {
     color: rgba(var(--dark-color), 1);
 }
 
-.sidebar .icon-sidebar-wrapper {
-    padding: 11px;
-    background-color: transparent;
-    border-radius: 8px;
-}
-
 .sidebar .menu-link.active .icon-sidebar-wrapper,
 .sidebar .menu-link:hover .icon-sidebar-wrapper {
-    /* background-color: rgba(var(--dark-color), 0.05); */
-    background-color:rgba(28, 163, 222, 1);
+    background-color:rgba(var(--primary-color), 1);
 }
 
 .sidebar .sidebar-icon {
@@ -216,36 +229,36 @@ body {
     background-image: url('../img/sidebar/dashboard.svg');
 }
 
-.sidebar .sidebar-icon.beranda-icon {
-    background-image: url('../img/sidebar/beranda.svg');
+.sidebar .sidebar-icon.kendaraan-icon {
+    background-image: url('../img/sidebar/kendaraan.svg');
 }
 
-.sidebar .sidebar-icon.profil-icon {
-    background-image: url('../img/sidebar/profil.svg');
+.sidebar .sidebar-icon.pelanggan-icon {
+    background-image: url('../img/sidebar/pelanggan.svg');
 }
 
-.sidebar .sidebar-icon.akademik-icon {
-    background-image: url('../img/sidebar/akademik.svg');
+.sidebar .sidebar-icon.sopir-icon {
+    background-image: url('../img/sidebar/sopir.svg');
 }
 
-.sidebar .sidebar-icon.kesiswaan-icon {
-    background-image: url('../img/sidebar/kesiswaan.svg');
+.sidebar .sidebar-icon.pemesanan-icon {
+    background-image: url('../img/sidebar/pemesanan.svg');
 }
 
-.sidebar .sidebar-icon.sarana-icon {
-    background-image: url('../img/sidebar/sarana.svg');
+.sidebar .sidebar-icon.pengembalian-icon {
+    background-image: url('../img/sidebar/pengembalian.svg');
 }
 
-.sidebar .sidebar-icon.humas-icon {
-    background-image: url('../img/sidebar/humas.svg');
+.sidebar .sidebar-icon.servis-icon {
+    background-image: url('../img/sidebar/servis.svg');
 }
 
-.sidebar .sidebar-icon.setting-icon {
-    background-image: url('../img/sidebar/setting.svg');
+.sidebar .sidebar-icon.pajak-icon {
+    background-image: url('../img/sidebar/pajak.svg');
 }
 
-.sidebar .sidebar-icon.logout-icon {
-    background-image: url('../img/sidebar/logout.svg');
+.sidebar .sidebar-icon.laporan-icon {
+    background-image: url('../img/sidebar/laporan.svg');
 }
 
 .sidebar .menu-link.active .sidebar-icon.dashboard-icon,
@@ -253,85 +266,82 @@ body {
     background-image: url('../img/sidebar/dashboard-active.svg');
 }
 
-.sidebar .menu-link.active .sidebar-icon.beranda-icon,
-.sidebar .menu-link:hover .sidebar-icon.beranda-icon {
-    background-image: url('../img/sidebar/beranda-active.svg');
+.sidebar .menu-link.active .sidebar-icon.kendaraan-icon,
+.sidebar .menu-link:hover .sidebar-icon.kendaraan-icon {
+    background-image: url('../img/sidebar/kendaraan-active.svg');
 }
 
-.sidebar .menu-link.active .sidebar-icon.profil-icon,
-.sidebar .menu-link:hover .sidebar-icon.profil-icon {
-    background-image: url('../img/sidebar/profil-active.svg');
+.sidebar .menu-link.active .sidebar-icon.pelanggan-icon,
+.sidebar .menu-link:hover .sidebar-icon.pelanggan-icon {
+    background-image: url('../img/sidebar/pelanggan-active.svg');
 }
 
-.sidebar .menu-link.active .sidebar-icon.akademik-icon,
-.sidebar .menu-link:hover .sidebar-icon.akademik-icon {
-    background-image: url('../img/sidebar/akademik-active.svg');
+.sidebar .menu-link.active .sidebar-icon.sopir-icon,
+.sidebar .menu-link:hover .sidebar-icon.sopir-icon {
+    background-image: url('../img/sidebar/sopir-active.svg');
 }
 
-.sidebar .menu-link.active .sidebar-icon.kesiswaan-icon,
-.sidebar .menu-link:hover .sidebar-icon.kesiswaan-icon {
-    background-image: url('../img/sidebar/kesiswaan-active.svg');
+.sidebar .menu-link.active .sidebar-icon.pemesanan-icon,
+.sidebar .menu-link:hover .sidebar-icon.pemesanan-icon {
+    background-image: url('../img/sidebar/pemesanan-active.svg');
 }
 
-.sidebar .menu-link.active .sidebar-icon.sarana-icon,
-.sidebar .menu-link:hover .sidebar-icon.sarana-icon {
-    background-image: url('../img/sidebar/sarana-active.svg');
+.sidebar .menu-link.active .sidebar-icon.pengembalian-icon,
+.sidebar .menu-link:hover .sidebar-icon.pengembalian-icon {
+    background-image: url('../img/sidebar/pengembalian-active.svg');
 }
 
-.sidebar .menu-link.active .sidebar-icon.humas-icon,
-.sidebar .menu-link:hover .sidebar-icon.humas-icon {
-    background-image: url('../img/sidebar/humas-active.svg');
+.sidebar .menu-link.active .sidebar-icon.servis-icon,
+.sidebar .menu-link:hover .sidebar-icon.servis-icon {
+    background-image: url('../img/sidebar/servis-active.svg');
 }
 
-.sidebar .menu-link.active .sidebar-icon.setting-icon,
-.sidebar .menu-link:hover .sidebar-icon.setting-icon {
-    background-image: url('../img/sidebar/setting-active.svg');
+.sidebar .menu-link.active .sidebar-icon.pajak-icon,
+.sidebar .menu-link:hover .sidebar-icon.pajak-icon {
+    background-image: url('../img/sidebar/pajak-active.svg');
 }
 
-.sidebar .menu-link.active .sidebar-icon.logout-icon,
-.sidebar .menu-link:hover .sidebar-icon.logout-icon {
-    background-image: url('../img/sidebar/logout-active.svg');
-}
-
-.sidebar .wrapper-arrow {
-    padding: 5px;
-    background-color: transparent;
-    border-radius: 5px;
-}
-
-.sidebar .menu-link.active .wrapper-arrow,
-.sidebar .menu-link:hover .wrapper-arrow {
-    background-color: rgba(var(--dark-color), 0.05);
-}
-
-.sidebar .arrow-sidebar-icon {
-    width: 9px;
-    height: 9px;
-    background-image: url('../img/icon/arrow-down.svg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    opacity: 0.62;
-}
-
-.sidebar .menu-link.active .arrow-sidebar-icon,
-.sidebar .menu-link:hover .arrow-sidebar-icon {
-    opacity: 1;
-}
-
-.sidebar .link-child {
-    padding: 11px 11px 11px 56px;
-    font-size: 0.875rem;
-    color: rgba(var(--dark-color), 0.62);
-    display: none;
-}
-
-.sidebar .menu-link.active .link-child {
-    display: inline-block;
-}
-
-.sidebar .link-child.active,
-.sidebar .link-child:hover {
-    color: rgba(var(--dark-color), 1);
+.sidebar .menu-link.active .sidebar-icon.laporan-icon,
+.sidebar .menu-link:hover .sidebar-icon.laporan-icon {
+    background-image: url('../img/sidebar/laporan-active.svg');
 }
 /* END SIDEBAR STYLE */
+
+
+/* HAMBURGER STYLE */
+.hamburger {
+    cursor: pointer;
+    position: absolute;
+    top: 22px;
+    right: 26px;
+    width: 46px;
+    height: 46px;
+    border-radius: 9999px;
+    background-color: rgba(var(--primary-color), 0.12);
+    border: 1px solid rgba(var(--primary-color), 1);
+}
+
+.hamburger .hamburger-icon {
+    width: 16px;
+    height: 16px;
+    background-image: url('../img/button/hamburger.svg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+/* END HAMBURGER STYLE */
+
+
+/* BREAKPOINT STYLE */
+@media (max-width: 991.98px) {
+    .sidebar {
+        position: absolute;
+        top: 0;
+        left: -230px;
+    }
+
+    .sidebar.active {
+        left: 0;
+    }
+}
+/* END BREAKPOINT STYLE */
