Progress: Finish Modal Pengguna Page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -477,6 +477,40 @@ body {
 /* END ALERT STYLE */
 
 
+/* MODAL STYLE */
+.modal .modal-content {
+    padding: 42px;
+    border-radius: 18px;
+    background-color: rgba(var(--light-color), 1);
+    border: var(--border-style);
+}
+
+.modal .modal-content .title {
+    margin-bottom: 32px;
+    font-size: 1.625rem;
+    font-family: var(--urbanist-semibold);
+}
+
+.modal.modal-delete .modal-content .title {
+    margin-bottom: 12px;
+}
+
+.modal .button-wrapper {
+    width: 100%;
+    gap: 8px;
+}
+
+.modal .caption-description {
+    font-size: 0.938rem;
+    color: rgba(var(--dark-color), 0.52);
+}
+
+.modal .row-button {
+    margin-bottom: 32px;
+}
+/* END MODAL STYLE */
+
+
 /* CONTENT DASHBOARD STYLE */
 .content {
     padding: 32px 60px 32px 50px;
@@ -551,7 +585,7 @@ body {
     z-index: 2;
 }
 
-.input-wrapper input {
+.input-wrapper .input {
     position: relative;
     padding: 20px;
     border-radius: var(--rounded-md);
@@ -569,6 +603,7 @@ body {
 }
 
 .button-primary,
+.button-reverse,
 .button-primary-full {
     padding: 12px 16px;
     border-radius: var(--rounded-md);
@@ -589,6 +624,17 @@ body {
 .button-primary:hover,
 .button-primary-full:hover {
     filter: contrast(120%);
+}
+
+.button-reverse {
+    background-color: rgba(var(--light-color), 1);
+    border: var(--border-style);
+    color: rgba(var(--dark-color), 1);
+    font-family: var(--urbanist-medium);
+}
+
+.button-reverse:hover {
+    background-color: rgba(var(--dark-color), 0.05);
 }
 
 .subtitle {
