--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -782,4 +782,11 @@ body {
         padding: 24px;
     }
 }
+
+
+@media (max-width: 991.98px) {
+    .table-default .data-value.data-length.data-length-none {
+        display: none !important;
+    }
+}
 /* END BREAKPOINT STYLE */
