--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -864,6 +864,38 @@ body {
     width: 100%;
     gap: 8px;
 }
+
+.modal-other {
+    width: 180px;
+    padding: 4px 0;
+    border-radius: var(--rounded-lg);
+    border: var(--border-style);
+    background-color: rgba(var(--light-color), 1);
+    gap: 4px;
+    position: absolute;
+    top: 32px;
+    right: 0;
+    opacity: 0;
+    z-index: -9999;
+}
+
+.modal-other.active {
+    top: 52px;
+    opacity: 1;
+    z-index: 4;
+}
+
+.modal-other .modal-link {
+    padding: 6px 14px;
+    background-color: rgba(var(--light-color), 1);
+    font-size: 0.875rem;
+    color: rgba(var(--dark-color), 1);
+}
+
+.modal-other .modal-link.active,
+.modal-other .modal-link:hover {
+    background-color: rgba(var(--dark-color), 0.05);
+}
 /* END CONTENT STYLE */
 
 
