--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -568,7 +568,7 @@ body {
     position: relative;
 }
 
-.input-wrapper label {
+.input-wrapper > label {
     position: absolute;
     top: -8px;
     left: 12px;
@@ -578,6 +578,35 @@ body {
     padding: 0 10px;
     background-color: rgba(var(--light-color), 1);
     z-index: 2;
+}
+
+.input-wrapper > .input-line p {
+    font-size: 0.913rem;
+    color: rgba(var(--dark-color), 0.52);
+    padding-right: 12px;
+    background-color: rgba(var(--light-color), 1);
+    width: fit-content;
+    position: relative;
+    z-index: 2;
+}
+
+.input-wrapper > .input-line .line {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    width: 100%;
+    height: 1px;
+    background-color: rgba(var(--dark-color), 0.12);
+    z-index: 1;
+}
+
+.input-wrapper .input-checkbox {
+    gap: 8px;
+}
+
+.input-wrapper .input-checkbox > label {
+    font-size: 0.875rem;
 }
 
 .input-wrapper .input {
