--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -375,6 +375,7 @@ body {
 .topbar .user-role {
     font-size: 0.875rem;
     color: rgba(var(--dark-color), 1);
+    text-transform: capitalize;
 }
 
 .topbar .popup-topbar {
@@ -961,6 +962,10 @@ body {
     font-size: 1.125rem;
     font-family: var(--urbanist-medium);
     margin-bottom: 0 !important;
+}
+
+.alert {
+    font-size: 0.938rem;
 }
 /* END CONTENT STYLE */
 
