--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -281,6 +281,22 @@ body {
 .sidebar .menu-link:hover .sidebar-icon.logout-icon {
     background-image: url('../img/sidebar/logout-active.svg');
 }
+
+.sidebar .link-child {
+    padding: 9px 9px 9px 56px;
+    font-size: 0.875rem;
+    color: rgba(var(--dark-color), 0.52);
+    display: none;
+}
+
+.sidebar .menu-link.active .link-child {
+    display: inline-block;
+}
+
+.sidebar .link-child.active,
+.sidebar .link-child:hover {
+    color: rgba(var(--dark-color), 1);
+}
 /* END SIDEBAR STYLE */
 
 
